prometheus-client added to requirements.txt and little changess to Docker file, main file, test_prediction.py add

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 *.cfg
 
 # Ignore folders
-Script/
+Scripts/
 Share/
 Include/
+Lib/
+mlruns/
 # Ignore virtual environment directories
 venv/
 env/
