--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: ⬇️ Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -34,19 +34,24 @@ jobs:
       - name: Run tests
         run: |
             pytest tests/
-      - name: Run tests with coverage
+      - name: ✅ Run tests with coverage
         run: |
             pytest --cov=src --cov-report=xml --cov-report=term
-      - name: Upload coverage report
+      - name: ⬆️ Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: .coverage
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
+      - name: ⬆️ Upload test results
+        uses: actions/upload-artifact@v4
         with:
             name: test-logs
             path: ./tests/logs/
+      - name: 🧹 Run pre-commit checks (optional)
+        if: always()
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
 
 
   docker-build:
@@ -57,9 +62,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v4
 
-      - name: Build Docker image
+      - name: 🐳 Build Docker image
         run: docker build -t customer-churn-app .
 
       # Optional: Push to Docker Hub/GitHub Container Registry
